Add DeleteProduct route
