# docs/swagger.yaml
@@ -155,6 +155,36 @@ paths:
       summary: Add a new product
       tags:
       - Products
+  /products/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a product from the system by its ID
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Product deleted successfully!
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Product not found
+          schema:
+            $ref: '#/definitions/github_com_in43sh_homebuzz-backend_routes_product.ErrorResponse'
+        "500":
+          description: Failed to delete product
+          schema:
+            $ref: '#/definitions/github_com_in43sh_homebuzz-backend_routes_product.ErrorResponse'
+      summary: Delete a product by ID
+      tags:
+      - Products
   /register:
     post:
       consumes:
